--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,4 @@ Werkzeug==2.3.7
 google-api-python-client==2.100.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.0.0
-psycopg2-binary==2.9.9
-
+psycopg[binary]
