--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,18 +1,17 @@
 # A generic, single database configuration.
 
 [alembic]
-# path to migration scripts
-script_location = migrations
-
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
-sqlalchemy.url = postgresql://user:password@host/dbname
+# set to 'true' to run the environment during
+# the 'revision' command, regardless of autogenerate
+# revision_environment = false
 
 
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic
+keys = root,sqlalchemy,alembic,flask_migrate
 
 [handlers]
 keys = console
@@ -34,6 +33,11 @@ qualname = sqlalchemy.engine
 level = INFO
 handlers =
 qualname = alembic
+
+[logger_flask_migrate]
+level = INFO
+handlers =
+qualname = flask_migrate
 
 [handler_console]
 class = StreamHandler
