--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "index.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "command": "flask db upgrade"
+      }
     }
   ],
   "routes": [
@@ -13,4 +16,3 @@
     }
   ]
 }
-
