--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "index.py",
       "use": "@vercel/python",
       "config": {
-        "command": "flask db upgrade"
+        "command": "flask db stamp head && flask db upgrade"
       }
     }
   ],
