--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ Werkzeug==2.3.7
 google-api-python-client==2.100.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.0.0
-psycopg[binary]
+psycopg2-binary
+psycopg
 bleach==6.1.0
 Flask-WTF==1.2.1
 email-validator==2.1.1
@@ -17,3 +18,4 @@ pandas==2.0.3
 xlsxwriter==3.1.9
 weasyprint==60.1
 reportlab==4.0.7
+Gunicorn
